--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -25,7 +25,8 @@
     <hr class="trait">
     <div class="copyright">© 2019 Copyright by Team 3 and Design by Tezitra</div>
     <br><br>
-</footer>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
 
 <!-- // Include FusionCharts core file -->
 <script type="text/javascript" src="http://cdn.fusioncharts.com/fusioncharts/latest/fusioncharts.js"></script>
@@ -37,6 +38,12 @@
 <!-- <script src="jquery.classyloader.js"></script> -->
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r80/three.js"></script>
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
+
+<script type="text/javascript" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/264161/OrbitControls.js"></script>
+
 <!-- ================Local script================= -->
 <script src="../assets/swiper.min.js"></script>
 <script>
@@ -44,3 +51,5 @@
 </script>
 <script src="../assets/script.js"></script>
 <!-- ============================================= -->
+
+</footer>
