--- a/app/views/layouts/_login_modal.html.erb
+++ b/app/views/layouts/_login_modal.html.erb
@@ -28,7 +28,7 @@
 
 	        		<div class='modal-body-right'>
 	        			<div class="modal-social-icons">
-	        				<a href="/users/auth/facebook" class="btn btn-default facebook"><i class="fab fa-facebook-f"> Se connecter</i></a>
+	        				<!-- <a href="/users/auth/facebook" class="btn btn-default facebook"><i class="fab fa-facebook-f"> Se connecter</i></a> -->
 	        				<!-- <a href='#' class="btn btn-default twitter"> <i class="fa fa-twitter modal-icons"> Sign In with Twitter </i></a>
 	        				<a href='#' class="btn btn-default google"> <i class="fa fa-google-plus modal-icons"> Sign In with Google </i></a>
 	        				<a href='#' class="btn btn-default linkedin"> <i class="fa fa-linkedin modal-icons"> Sign In with Linkedin </i></a> -->
