--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,12 @@
       </div>
 
       <div id="yield">
+
     	  <%= yield %>
+      
       </div>
+
+      <div id="chevron" class="chevron" style="position: fixed; top: 40%; left: -.5%;font-size: 7em;"><i onclick="openNav()" class="fas fa-caret-right" style="width: 100%; height: 100%;"></i></div>
 
 
       <!-- <br><br><br><br><br><br>
