--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -16,12 +16,15 @@ body {
     font-size: 22px;
     width: 50px;
     height: 50px;
-    background: rgba(0, 255, 0, .7);
+    background: #141C2F;
     color: white;
     border: none;
     cursor: pointer;
     display: none;
     border-radius: 50px;
+}
+#topbutton:hover {
+    background: #2a6496;
 }
 
 .box {
