--- a/app/assets/stylesheets/normalize.css
+++ b/app/assets/stylesheets/normalize.css
@@ -1,5 +1,9 @@
 div#flash {
-    z-index: 10;
+    z-index: 100;
+}
+
+div.chevron {
+	z-index: 8;
 }
 
 div#mySidenav {
@@ -9,6 +13,10 @@ div#mySidenav {
 header,
 footer {
     z-index: 6;
+}
+
+div#games_space{
+	z-index: 5;
 }
 
 navbar {
@@ -25,4 +33,46 @@ section {
 a:hover {
     cursor: pointer;
     color: white;
+}
+
+#main {
+    padding-top: 5%;
+}
+
+#main *{
+    margin-top: 1%;
+}
+
+/* Scrollbar */
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+    border-radius: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #141C2F;
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #2a6496;
+}
+
+div#chevron i {
+    color: #141C2F;
+}
+
+div#chevron i:hover {
+    cursor: pointer;
+    color: #2a6496;
 }
