--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,135 +1,502 @@
-
-/*# sourceMappingURL=style.css.map */
-
-/* qcm */
-/* .section_qcm {
-    padding-top: 100px;
-} */
-.section_qcm h1 {
-    text-align: center;
+.student_profil {
+    background: url('../assets/background-web.jpg') center no-repeat;
+    background-size: cover;
+    position: relative;
 }
 
-.register-question {
-    padding: 0px 100px 50px 70px;
+.student_profil div {
+    /*background: 0 0;*/
 }
 
-.section_qcm p {
-    margin-left: 30px;
+.student_profil .btn_option {
+    width: 100%;
 }
 
-.section_qcm input[type=radio] {
-    visibility: visible;
-    left: 70%;
-    top: 10%;
+.student_profil .contenue {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
-.section_qcm input {
+.student_profil .form {
     width: auto;
+    height: auto;
+    margin: 0px 0px 20px 0px;
+    border: 1px solid #D5D6D2;
+    padding: 1rem;
 }
 
-.section_qcm label {
-    width: 10%;
+.student_profil .rond {
+    margin-top: 3.5%;
+    padding: 15px;
+    border: 1px solid #D5D6D2;
+    width: 10rem;
+    height: 10rem;
+    border-radius: 20rem 20rem;
 }
 
-.section_qcm label:hover {
+.student_profil .rond_div {
+    background: 0 0;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    border: 1px solid #D5D6D2;
+}
+
+.student_profil .col-md-6 {
+    width: 100%;
+    border: 1px solid red;
+}
+
+.student_profil .niveau {
+    width: 40rem;
+    height: auto;
+    border: 1px solid #D5D6D2;
+    background-color: 0 0;
+}
+
+.student_profil .profil {
+    width: 10em;
+    height: 10em;
+    border-radius: 10em 10em;
+}
+
+.student_profil .name {
+    color: #3a5199;
+    font-size: 1.5em;
+    font-family: Arial Narrow, sans-serif;
+}
+
+.student_profil .etab,
+.student_profil .class {
+    font-size: 1.5em;
+    font-family: URW Chancery L, cursive;
+    color: #2f2e33;
+    list-style: none;
+}
+
+.student_profil .table_niveau {
+    width: 100%;
+    height: 100%;
+}
+
+.student_profil td {
+    text-align: center;
+    color: #3a5199;
+    font-family: New Century Schoolbook, TeX Gyre Schola, serif;
+}
+
+.student_profil table {
+    border-collapse: collapse;
+}
+
+.student_profil th {
+    color: #2f2e33;
+    font-size: 95%;
+    font-family: URW Chancery L, cursive;
+
+}
+
+.student_profil .stats {
+    margin-bottom: 5%;
+    width: 100%;
+}
+
+.student_profil .stats h1 {
+    font-family: oblique Arial, Helvetica, sans-serif;
+    color: #3a5199;
+}
+
+.student_profil .stats span {
+    font-family: FreeMono, monospace;
+}
+
+/* End Student */
+
+/* Start Teacher */
+a:focus,
+a:active {
+    text-decoration: none;
+    outline: none;
+    transition: all 300ms ease 0s;
+    -moz-transition: all 300ms ease 0s;
+    -webkit-transition: all 300ms ease 0s;
+    -o-transition: all 300ms ease 0s;
+    -ms-transition: all 300ms ease 0s;
+}
+
+input,
+select,
+textarea {
+    outline: none;
+    appearance: unset !important;
+    -moz-appearance: unset !important;
+    -webkit-appearance: unset !important;
+    -o-appearance: unset !important;
+    -ms-appearance: unset !important;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    appearance: none !important;
+    -moz-appearance: none !important;
+    -webkit-appearance: none !important;
+    -o-appearance: none !important;
+    -ms-appearance: none !important;
+    margin: 0;
+}
+
+input:focus,
+select:focus,
+textarea:focus {
+    outline: none;
+    box-shadow: none !important;
+    -moz-box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    -o-box-shadow: none !important;
+    -ms-box-shadow: none !important;
+}
+
+input[type=checkbox] {
+    appearance: checkbox !important;
+    -moz-appearance: checkbox !important;
+    -webkit-appearance: checkbox !important;
+    -o-appearance: checkbox !important;
+    -ms-appearance: checkbox !important;
+}
+
+input[type=radio] {
+    appearance: radio !important;
+    -moz-appearance: radio !important;
+    -webkit-appearance: radio !important;
+    -o-appearance: radio !important;
+    -ms-appearance: radio !important;
+}
+
+figure {
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield !important;
+    appearance: none !important;
+    -webkit-appearance: none !important;
+}
+
+input:-webkit-autofill {
+    box-shadow: 0 0 0 30px transparent inset;
+    -moz-box-shadow: 0 0 0 30px transparent inset;
+    -webkit-box-shadow: 0 0 0 30px transparent inset;
+    -o-box-shadow: 0 0 0 30px transparent inset;
+    -ms-box-shadow: 0 0 0 30px transparent inset;
+}
+
+h2 {
+    line-height: 1.66;
+    margin: 0;
+    padding: 0;
+    font-weight: 700;
+    color: #222;
+    font-family: fantasy;
+    font-size: 20px;
+    margin-bottom: 32px;
+}
+
+.clear {
+    clear: both;
+}
+
+
+.container {
+    width: 1400px;
+    position: relative;
+    margin: 0 auto;
+    background: #fff;
+}
+
+.signup-img,
+.signup-form {
+    width: 50%;
+}
+
+.signup-img {
+    margin-bottom: -7px;
+}
+
+/* .register-form {
+    padding: 50px 100px 50px 70px;
+} */
+
+.form-row .form-group {
+    display: inline-block;
+    width: 48%;
+    padding: 0px;
+}
+
+.form-group {
+    margin-bottom: 23px;
+    position: relative;
+}
+
+input,
+select {
+    display: block;
+    width: 100%;
+    border: 1px solid #ebebeb;
+    padding: 11px 20px;
+    box-sizing: border-box;
+    font-family: 'Montserrat';
+    font-weight: 500;
+    font-size: 13px;
+}
+
+input:focus,
+select:focus {
+    border: 1px solid #ff6801;
+}
+
+label {
+    font-size: 14px;
+    font-weight: bold;
+    font-family: sans-serif;
+    margin-bottom: 2px;
+    display: block;
+}
+
+.form-radio {
+    margin-bottom: 18px;
+}
+
+.form-radio input {
+    width: auto;
+    display: inline-block;
+}
+
+.radio-label {
+    padding-right: 72px;
+}
+
+.form-radio-item {
+    position: relative;
+    margin-right: 45px;
+}
+
+.form-radio-item label {
+    font-weight: 500;
+    font-size: 13px;
+    padding-left: 25px;
+    position: relative;
+    display: block;
     cursor: pointer;
 }
 
-.section_qcm input[type=text] {
-    display: inline;
-    padding: 0;
+.check {
+    display: inline-block;
+    position: absolute;
+    border: 1px solid #ebebeb;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -o-border-radius: 50%;
+    -ms-border-radius: 50%;
+    height: 13px;
+    width: 13px;
+    top: 4px;
+    left: 0px;
+    transition: border .25s linear;
+    -webkit-transition: border .25s linear;
 }
 
-.well_section {
-    background-color: #ffff;
+.check:before {
+    position: absolute;
+    display: block;
+    content: '';
+    width: 9px;
+    height: 9px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -o-border-radius: 50%;
+    -ms-border-radius: 50%;
+    top: 2px;
+    left: 2px;
+    margin: auto;
+    transition: background 0.25s linear;
+    -webkit-transition: background 0.25s linear;
 }
 
-.well_section h4:first-child {
-    text-align: center;
-    font-size: 40px;
-    margin-bottom: 50px;
+input[type=radio]:checked~.check {
+    border: 1px solid #ff6801;
 }
 
-.well_section {
-    min-height: 20px;
-    padding: 19px;
-    margin-bottom: 20px;
-    background-color: #ffff;
-    border: 1px solid #e3e3e3;
-    border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+input[type=radio]:checked~.check::before {
+    background: #ff6801;
 }
 
-.well_section fieldset {
-    margin-left: 55px;
+label,
+input {
+    color: white;
 }
 
-.well_section hr {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    border: 0;
-    border-top: 2px solid #ca4c62;
+input {
+    background: 0 0;
 }
 
-.dash {
-    width: 100%;
-    font-size: 25px;
+input[type=date] {
+    max-height: 44px;
 }
 
-.division_confirmation {
-    display: flex;
+select {
+    appearance: none !important;
+    -moz-appearance: none !important;
+    -webkit-appearance: none !important;
+    -o-appearance: none !important;
+    -ms-appearance: none !important;
+    position: relative;
+    background: 0 0;
+    cursor: pointer;
+}
+
+.select-icon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
     justify-content: center;
-    margin-top: 25px;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
+    -o-justify-content: center;
+    -ms-justify-content: center;
+    align-items: center;
+    -moz-align-items: center;
+    -webkit-align-items: center;
+    -o-align-items: center;
+    -ms-align-items: center;
 }
 
-.question_section {
-    display: flex;
-    align-content: space-between;
-    flex-wrap: wrap;
-    margin-left: 25px;
+.select-icon i {
     justify-content: center;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
+    -o-justify-content: center;
+    -ms-justify-content: center;
+    align-items: center;
+    -moz-align-items: center;
+    -webkit-align-items: center;
+    -o-align-items: center;
+    -ms-align-items: center;
+    width: 40px;
+    height: 20px;
+    font-size: 18px;
+    color: #999;
 }
 
-.question_section .true {
-    background-color: rgba(5, 205, 53, 1);
+.submit {
+    width: 140px;
+    height: 40px;
+    display: inline-block;
+    font-family: 'Poppins';
+    font-weight: 400;
+    font-size: 13px;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
 }
 
-.question_section .true span {
+#reset {
+    background: #f8f8f8;
+    color: #999;
+    margin-right: 8px;
+}
+
+#reset:hover,
+input[type=submit]:hover {
+    background: #ff6801;
     color: #fff;
 }
 
-.question_section .choice_false {
-    background-color: rgba(209, 5, 43, 1);
-}
-
-.question_section .choice_false span {
+#submit {
+    background: #ff6801;
     color: #fff;
 }
 
-.question_section .choice_true {
-    background-color: #47cccd;
+#submit:hover {
+    background-color: #cd5300;
 }
 
-.question_section .choice_true span {
-    color: #fff;
-}
+/*/*/
+* @extend display-flex;
 
-.question_section div div {
-    width: 400px;
-    background-color: #ffff;
-    margin-right: 30px;
-    padding: 0 10px 0 10px;
-    height: 60px;
-    border: 2px solid rgba(0, 0, 0, .4);
-    margin-bottom: 10px;
-}
-
-.question_section div div span {
-    margin-left: 25px;
+*/ display-flex,
+.signup-content,
+.form-row,
+.form-radio,
+.select-icon,
+.select-icon i {
     display: flex;
-    margin-top: 20px;
-    color: #F16F9A;
-    font-family: serif;
-    font-size: 17px;
-}*/*/
+    display: -webkit-flex;
+    margin-top: 70px;
+}
+
+/* media queries  */
+@media screen and (max-width: 992px) {
+    .container {
+        width: 85%;
+        max-width: 100%;
+    }
+
+    .signup-content {
+        flex-direction: column;
+        -moz-flex-direction: column;
+        -webkit-flex-direction: column;
+        -o-flex-direction: column;
+        -ms-flex-direction: column;
+    }
+
+    .signup-img,
+    .signup-form {
+        width: 100%;
+    }
+}
+
+/* @media screen and (max-width: 768px) {
+    .register-form {
+        padding: 50px 40px 50px 40px;
+    }
+} */
+
+@media screen and (max-width: 575px) {
+    .form-row {
+        flex-direction: column;
+        -moz-flex-direction: column;
+        -webkit-flex-direction: column;
+        -o-flex-direction: column;
+        -ms-flex-direction: column;
+        margin: 0px;
+    }
+
+    .radio-label {
+        padding-right: 22px;
+    }
+
+    .form-radio-item {
+        margin-right: 25px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .form-radio {
+        flex-direction: column;
+        -moz-flex-direction: column;
+        -webkit-flex-direction: column;
+        -o-flex-direction: column;
+        -ms-flex-direction: column;
+    }
+
+    /* end media queries  */
+    .submit {
+        width: 100%;
+    }
+}
+
+/*Teacher End*/
