--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,79 +45,69 @@
                 </span>
             </div>
         </div>
+        <% unless user_signed_in? %>
+            
         <div class="btn">
             <a href="/users/sign_up"><button type="button"> Lancez vous </button></a>
         </div>
+
+        <% end %>
     </div>
     <!-- end canvas html -->
 </section>
-<section class="second_section">
-    <div>
-        <h3><strong>Qu'en pensent nos étudiants?</strong></h3>
-        <hr class="trait_two">
-    </div>
-    <div class="student_section">
-        <% Student.all.each do |student| %>
-            <% if User.find_by(email: student.email).avatar.attached? %>
-            <div class="student" data-aos="zoom-in" data-aos-duration="500" style="">
-            <%= image_tag User.find_by(email: student.email).avatar, class: "user_avatar" %>
-            <% else %>
-            <div class="student" data-aos="zoom-in" data-aos-duration="500" style="background: url('../assets/ados_essai.jpg') center;">
-                <% end %>
+<div>
+    <section class="second_section">
+        <div>
+            <h3><strong>Nos étudiants</strong></h3>
+            <hr class="trait_two">
+        </div>
+        <div class="student_section">
+            <% first_students.length.times do |s| %>
+            <div class="student" data-aos="zoom-in" data-aos-duration="500" style="background: url('<%= students_images[s] %>') center no-repeat; background-size: cover;">
                 <div class="student_one_love">
-                    <font>3</font><span class="glyphicon glyphicon-heart">
+                    <span class="glyphicon glyphicon-heart">
                     </span>
                 </div>
             </div>
             <% end %>
         </div>
-</section>
-<section class="third_section">
-    <div>
-        <h3><strong>Qu'en pensent les professeurs?</strong></h3>
-        <hr class="trait_two">
-    </div>
-    <div class="teacher">
-        <% @teachers.each do |teacher| %>
-        <div class="teacher_section">
-            <% if User.find_by(email: teacher.email).avatar.attached? %>
-            <div data-aos="zoom-in" data-aos-duration="1000" style="">
-                <%= image_tag User.find_by(email: teacher.email).avatar %>
-            <% else %>
-            <div class="image_teacher" data-aos="zoom-in" data-aos-duration="1000" style="">
-            <% end %>
-            </div>
-            <div class="commit_teacher" data-aos="zoom-in" data-aos-duration="2000">
-                <h4>
-                    <%= teacher.subject.title %> teacher,
-                    <%= teacher.first_name %>
-                </h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-        </div>
-        <% end %>
-    </div>
-</section>
-<section class="four_section">
-    <div>
-        <h3><strong>Nos Futurs partenaires</strong></h3>
-        <hr class="trait_two">
-    </div>
-    <div class="establishment" data-aos="fade-up-left" data-aos-duration="1000">
-        <% EducationalEstablishment.all.each do |establishment| %>
-        <% if establishment.logo.attached? %>
+    </section>
+    <section class="third_section">
         <div>
-            <%= image_tag establishment.logo, class: "establishment" %>
-            <% else %>
-            <div style="background: url('../assets/partenaire.PNG') center no-repeat;">
+            <h3><strong>Nos professeurs</strong></h3>
+            <hr class="trait_two">
+        </div>
+        <div class="teacher">
+            <% nos_profs.each do |t| %>
+                <div class="teacher_section">
+                    
+                    <div class="image_teacher" data-aos="zoom-in" data-aos-duration="1000" style="background: url(<%= t[:logo_url] %>) center no-repeat; background-size: cover;">
+                    </div>
+                    <div class="commit_teacher" data-aos="zoom-in" data-aos-duration="2000">
+                        <h4>
+                            <%= t[:firstname] %>,
+                            <%= t[:speciality] %>
+                        </h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </div>
                 <% end %>
-                <h4>
-                    <%= establishment.title %>
-                </h4>
+            </div>
+    </section>
+    <section class="four_section">
+        <div>
+            <h3><strong>Nos Futurs partenaires</strong></h3>
+            <hr class="trait_two">
+        </div>
+        <div class="establishment" data-aos="fade-up-left" data-aos-duration="1000">
+            <% @ests.length.times do |e| %>
+            <div class="">
+                <div style="background: url(<%= establishments_images[e] %>) center no-repeat; background-size: cover;" class="img_establishment">
+                </div>
             </div>
             <% end %>
-        </div>
-</section>
+    </section>
+</div>
 <section class="five_section" id="team">
     <div>
         <h3><strong>Notre équipe</strong></h3>
