--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,15 @@
                 <h3><i class="fas fa-home"> Acceuil</i></h3>
             </a>
         </div>
-        <div><a href="#team" class="link_team">
+            <% if user_signed_in? %>
+                
+            <div><a href="/users/<%= current_user.id %>/presentation/team" class="link_team">
+                
+            <% else %>
+
+            <div><a href="#" class="link_team">
+
+            <% end %>
             <span>
             </span>
             <h3><i class="fas fa-question-circle"> A propos</i></h3>
