--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,93 +1,105 @@
-<%= form_with(model: student, local: true) do |f| %>
-  <% if student.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(student.errors.count, "error") %> prohibited this student from being saved:</h2>
-
-      <ul>
-      <% student.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+<div id="student_form" class="col-md-6">
+    <div class="link_to_new_student btn btn-light">
+        <h3>S'inscrire en tant que nouvel élève</h3>
     </div>
-  <% end %>
-
-  <div class="form-row">
-    <div class="form-group">
-        <%= f.label :last_name, "Nom" %>
-        <%= f.text_field :last_name, placeHolder: Faker::Name.last_name, autocomplet: 'last_name', required: ""%>
-    </div>
-    <div class="form-group">
-        <%= f.label :first_name, "Prénom" %>
-        <%= f.text_field :first_name, placeHolder: Faker::Name.first_name, autocomplet: "first_name", required: ""%>
-    </div>
-</div>
-<div class="form-group" style="width: 97%">
-    <%= f.label :address, "Address" %>
-    <%= f.text_field :address, placeHolder: Faker::Address.street_address, autocomplet: 'address', required: ""%>
-</div>
-<div class="form-row">
-    <div class="form-group">
-        <%= f.label :city,  "Ville" %>
-        <div class="form-select">
-            <select name="city" id="state_teacher">
-                <option value="tana">Antananarivo</option>
-                <option value="tamatave">Tamatave</option>
-                <option value="Majunga">Majunga</option>
-                <option value="Fianarantsoa">Fianarantsoa</option>
-                <option value="Fianarantsoa">Toliara</option>
-                <option value="Fianarantsoa">Antiranana</option>
-                <option value="tana">Autre</option>
-            </select>
-            <span class="select-icon"><i class="zmdi zmdi-chevron-down"></i></span>
+    <div class="student_form">
+        <%= form_with(model: student, local: true) do |f| %>
+        <% if student.errors.any? %>
+        <div id="error_explanation">
+            <h2>
+                <%= pluralize(student.errors.count, "error") %> prohibited this student from being saved:</h2>
+            <ul>
+                <% student.errors.full_messages.each do |message| %>
+                <li>
+                    <%= message %>
+                </li>
+                <% end %>
+            </ul>
         </div>
+        <% end %>
+        <div class="names row">
+            <div class="firstname col-md-6">
+                <%= f.label :last_name, "Nom" %>
+                <%= f.text_field :last_name, placeHolder: Faker::Name.last_name, autocomplet: 'last_name', required: ""%>
+            </div>
+            <div class="lastname col-md-6">
+                <%= f.label :first_name, "Prénom" %>
+                <%= f.text_field :first_name, placeHolder: Faker::Name.first_name, autocomplet: "first_name", required: ""%>
+            </div>
+        </div>
+        <div class="row">
+            <div class="birthdate col-md-6">
+                <%= f.label :date_of_birth,  "Date de naissance" %>
+                <%= f.date_field :date_of_birth, placeHolder: "Date-de-naissance", autocomplet: 'date_of_birth' %>
+            </div>
+            <div class="address col-md-6" style="">
+                <%= f.label :address, "Address" %>
+                <%= f.text_field :address, placeHolder: Faker::Address.street_address, autocomplet: 'address', required: ""%>
+            </div>
+        </div>
+        <div class="location row">
+            <div class="city col-md-6">
+                <%= f.label :city,  "Ville" %>
+                <div class="form-select">
+                    <select name="city" id="state_teacher">
+                        <option value="tana">Antananarivo</option>
+                        <option value="tamatave">Tamatave</option>
+                        <option value="Majunga">Majunga</option>
+                        <option value="Fianarantsoa">Fianarantsoa</option>
+                        <option value="Fianarantsoa">Toliara</option>
+                        <option value="Fianarantsoa">Antiranana</option>
+                        <option value="tana">Autre</option>
+                    </select>
+                    <span class="select-icon"><i class="zmdi zmdi-chevron-down"></i></span>
+                </div>
+            </div>
+            <div class="est col-md-6">
+                <%= f.label :educational_establishment, "Etablissement scolaire" %>
+                <select name="educational_establishment" id="educational_establishment">
+                    <% EducationalEstablishment.all.each do |est| %>
+                    <option>
+                        <%= est.title %>
+                    </option>
+                    <% end %>
+                    <option>Autre</option>
+                </select>
+            </div>
+        </div>
+        <div class="">
+            <%= f.label :country, "Pays" %>
+            <select name="country" id="country">
+                <% CS.countries.each do |key, country| %>
+                <option>
+                    <%= country %>
+                </option>
+                <% end %>
+            </select>
+        </div>
+        <div class="row">
+            <div class="subject col-md-6">
+                <%= f.label :subject, "Matière préferée" %>
+                <select name="subject" id="subject">
+                    <% Subject.all.each do |subject| %>
+                    <option>
+                        <%= subject.title %>
+                    </option>
+                    <% end %>
+                </select>
+            </div>
+            <div class="level col-md-6">
+                <%= f.label :level, "Classe actuelle" %>
+                <select name="level" id="level">
+                    <% Level.all.each do |level| %>
+                    <option>
+                        <%= level.title %>
+                    </option>
+                    <% end %>
+                </select>
+            </div>
+        </div>
+        <div class="submit">
+            <%= f.submit class: "submit" %>
+        </div>
+        <% end %>
     </div>
-    <div class="form-group">
-        <%= f.label :educational_establishment, "Etablissement scolaire" %><br>
-        <select name="educational_establishment" id="educational_establishment">
-            <% EducationalEstablishment.all.each do |est| %>
-            <option>
-                <%= est.title %>
-            </option>
-            <% end %>
-            <option>Autre</option>
-        </select>
-    </div>
-</div>
-<div class="form-group">
-    <%= f.label :country, "Pays" %><br>
-    <select name="country" id="country">
-        <% CS.countries.each do |key, country| %>
-        <option>
-            <%= country %>
-        </option>
-        <% end %>
-    </select>
-</div>
-<div class="form-group">
-    <%= f.label :date_of_birth,  "Date de naissance" %>
-    <%= f.date_field :date_of_birth, placeHolder: "Date-de-naissance", autocomplet: 'date_of_birth' %>
-</div>
-<div class="form-group">
-    <%= f.label :subject, "Matière préferée" %><br>
-    <select name="subject" id="subject">
-        <% Subject.all.each do |subject| %>
-        <option>
-            <%= subject.title %>
-        </option>
-        <% end %>
-    </select>
-</div>
-<div class="form-group">
-    <%= f.label :level, "Classe actuelle" %><br>
-    <select name="level" id="level">
-        <% Level.all.each do |level| %>
-        <option>
-            <%= level.title %>
-        </option>
-        <% end %>
-    </select>
-</div>
-<div class="form-submit">
-    <%= f.submit class: "submit" %>
-    <% end %>
 </div>
