--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,5 +1,6 @@
 <div class="student_profil">
-    <div class="container" style="background: url('../assets/profil_photo.jpg'); background-size: cover; margin-top: 87px;">
+    <div class="container" style="background: url('../assets/profil_photo.jpg'); 
+    background-size: cover;">
         <div class="contenue" style="margin: 100px 0 0 0;">
             <div class="col-md-4 form" style="">
                 <center>
