--- a/app/assets/stylesheets/games.css
+++ b/app/assets/stylesheets/games.css
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Voltaire');
 
 #games_space {
-    padding: 10% 0%;
+    margin-top: 0%;
+    padding: 10%  0%;
     height: 100%;
     width: 100%;
     text-align: center;
@@ -17,7 +18,8 @@
 }
 
 div.games_space #world {
-    position: absolute;
+    margin-top: 0%;
+    position: relative;
     width: 100%;
     height: 100%;
     background-color: #dbe6e6;
