--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,17 +1,29 @@
-<center id="games_space">
-    <div class="games_space" style="">
-        <div id="world"></div>
-        <div id="gameoverInstructions">
-            Game Over
-        </div>
-        <div id="dist">
-            <div class="label">distance</div>
-            <div id="distValue">000</div>
-        </div>
-        <div id="instructions">Click to jump<span class="lightInstructions"> — Grab the carrots / avoid the hedgehogs</span></div>
+<center id="">
+    <% @games.each do |game| %>
+    <div class="games_space" id="game_<%= game.id %>" style="">
+        <a href="<%= game.url %>">
+            <div>
+                <%= image_tag game.image %>
+            </div>
+            <div>
+                <%= game.title %>
+            </div>
+        </a>
     </div>
-    <div class="games_space">
-        <div id="world"></div>
-        <div id="instructions">Press and drag to make wind<br /><span class="lightInstructions">the lion will surely appreciate</span></div>
-    </div>
+    <% end %>
+    <!-- <div class="games_space" style="">
+            <div id="world"></div>
+            <div id="gameoverInstructions">
+                Game Over
+            </div>
+            <div id="dist">
+                <div class="label">distance</div>
+                <div id="distValue">000</div>
+            </div>
+            <div id="instructions">Click to jump<span class="lightInstructions"> — Grab the carrots / avoid the hedgehogs</span></div>
+        </div>
+        <div class="games_space">
+            <div id="world"></div>
+            <div id="instructions">Press and drag to make wind<br /><span class="lightInstructions">the lion will surely appreciate</span></div>
+        </div> -->
 </center>
