--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,74 +1,44 @@
-<div class="student_profil">
-    <div class="container" style="background: url('../assets/profil_photo.jpg'); 
-    background-size: cover;">
-        <div class="contenue" style="margin: 100px 0 0 0;">
-            <div class="col-md-4 form" style="">
-                <center>
-                    <span class="name">
+<div class="">
+    <div class="">
+        <table class="table">
+            <thead class="table-dark">
+                <tr>
+                    <th>Nom</th>
+                    <th>Prénom</th>
+                    <th>Etablissement</th>
+                    <th>Scores</th>
+                    <th>Tests</th>
+                </tr>
+            </thead>
+            <tbody class="table-light">
+                <tr>
+                    <td>
+                        <%= @student.last_name %>
+                    </td>
+                    <td>
                         <%= @student.first_name %>
-                    </span><br>
-                </center>
-                Etudiant chez <span class="etab">
-                    <%= @student.educational_establishment.title %></span><br>
-                En classe de <span class="class">
-                    <%= @student.level.title %></span><br>
-                Fan des <span class="class">
-                    <%= @student.subject.title %></span><br>
-                <% if authenticate_student %>
-                <%= link_to 'Editer mon profil', edit_student_path(@student), class: "btn btn-secondary" %>
-                <% end %>
-            </div>
-            <div class="col-md-4 rond">
-                <div class="rond_div" style="">
-                    <% if @user.avatar.attached? %>
-                    <%= image_tag @user.avatar, class: "profil" %>
-                    <% end %>
-                    <% @student.results.each do |rslt| %>
-                    <%= link_to "#{rslt.title}", student_result_path(@student.id, rslt.id) %><br>
-                    <% end %>
-                    <center style="margin: 5%;">
-                        <%= link_to "Mes résultats", student_results_path(@student.id), class: "btn btn-success", style: "border-radius: 10px;" %>
-                    </center>
-                </div>
-            </div>
-            <div class="col-md-4 niveau" style="margin-bottom: 20px;">
-                <table class="table_niveau">
-                    <thead>
-                        <tr>
-                            <th>
-                                <center>Matière</center>
-                            </th>
-                            <th>
-                                <center>Nombre de tests</center>
-                            </th>
-                            <th>
-                                <center>Tests réussis</center>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <% current_student.tests.each do |test| %>
-                        <tr>
-                            <td>
-                                <%= test.subject %>
-                            </td>
-                            <td>
-                                <%= current_student.tests.where(subject: test.subject).length %> testes</td>
-                            <td>
-                                <%= tests_won.length %> reussi(s)</td>
-                        </tr>
-                        <% end %>
-                    </tbody>
-                </table>
-            </div>
-        </div>
+                    </td>
+                    <td>
+                        <%= @student.educational_establishment.title %>
+                    </td>
+                    <td>
+                        <%= @student.score %>
+                    </td>
+                    <td>
+                        <%= @student.tests.length %>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
+    <% if he_has_done_one_test %>
     <div class="container">
         <div class="stats">
             <center>
-                <h1><a href="/students/<%= current_student.id %>/results#stats" class="btn btn-light"><i class="fa fa-chart-bar"> Ma progression</i></a></h1>
-            </center>	
+                <h1><a href="/students/<%= current_student.id %>/results" class="btn btn-light"><i class="fa fa-chart-bar"> Ma progression</i></a></h1>
+            </center>
             <% Subject.all.each do |subject| %>
+            <% if subject_purcentage(subject) != 0 %>
             <span>
                 <%= subject.title %></span>
             <div class="progress">
@@ -76,7 +46,8 @@
                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: <%= subject_purcentage(subject) %>%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <% end %>
+            <% end %>
         </div>
     </div>
-</div>
+    <% end %>
 </div>
