--- a/app/views/teachers/edit.html.erb
+++ b/app/views/teachers/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Teacher</h1>
-
-<%= render 'form', teacher: @teacher %>
-
-<%= link_to 'Show', @teacher %> |
-<%= link_to 'Back', teachers_path %>
+<div class="edit_teacher container">
+    <%= render 'form', teacher: @teacher %>
+</div>
