--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,25 +1,18 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Tests</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tests.each do |test| %>
-      <tr>
-        <td><%= link_to 'Show', test %></td>
-        <td><%= link_to 'Edit', edit_test_path(test) %></td>
-        <td><%= link_to 'Destroy', test, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Test', new_test_path %>
+<div class="">
+  <h1><%= link_to 'New Test', new_teacher_test_path(current_teacher) %></h1>
+  <h1>Tests</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th colspan="3">Title</th>
+            </tr>
+        </thead>
+        <tbody>
+            <% @tests.each do |tst| %>
+            <tr>
+              <td><%= tst.title %></td>
+            </tr>
+            <% end %>
+        </tbody>
+    </table>
+</div>
